# Near

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  SECURITY.md  deploy.sh  index.html  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1751771602433-93bf98791ce2c8.mjs
contract/: Cargo.toml  build.sh
contract/src/: # Code Citations.md  lib.rs
src/: App.tsx  main.tsx
src/components/: AIAnalysisPanel.tsx  ContractStatus.tsx  CreateIntentModal.tsx  Dashboard.tsx  IntentManager.tsx  Navigation.tsx  PriceChart.tsx  PriceMonitor.tsx  WalletConnection.tsx
src/components/ui/: AnimatedBackground.tsx  Button.tsx  Card.tsx
src/contexts/: WalletContext.tsx
src/contracts/: arbitrage.rs
src/hooks/: useGroqAI.ts  useNear.ts  usePriceFeeds.ts
src/pages/: DashboardPage.tsx  HistoryPage.tsx  LandingPage.tsx  SettingsPage.tsx
src/utils/: groqAI.ts  localStorage.ts  near.ts  nearContract.ts  priceFeeds.ts
