[package]
name = "arbitrage-contract"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.15.1", features = ["legacy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.9.3"
near-token = "0.3.0"
near-gas = "0.3.0"
hex = "0.4"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[features]
default = []